tomcat/tomcatservice.yaml
kind: Service
apiVersion: v1
metadata:
  name: tomcat-service
spec:
  selector:
    app: tomcat
  #ports:
  #- protocol: TCP
  #  port: 80
  #  targetPort: 8080
  type: NodePort

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
